# glEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: IndexBuffer.cpp.930F1D2AFE09C89B.idx  IndexBuffer.h.FC94A6E1FDEDDAFD.idx  Renderer.cpp.90C7EE60D5432170.idx  Renderer.h.64418F75E384656B.idx  Shader.cpp.D84A27E41A20270C.idx  Shader.h.1449082EAEA39616.idx  VertexArray.cpp.AAAB2290E6B00963.idx  VertexArray.h.A94557962B830069.idx  VertexBuffer.cpp.1C5FC61A104E4C14.idx  VertexBuffer.h.B06367517217EB07.idx  VertexBufferLayout.h.6724F71FD273431A.idx  cocoa_init.m.2B525C54D152C7A2.idx  cocoa_init.m.A04D4C6F0B2B4975.idx  cocoa_joystick.h.16163DA131682D71.idx  cocoa_joystick.h.DCBFA9869863E023.idx  cocoa_joystick.m.51FF3330BEAA7C2A.idx  cocoa_joystick.m.F5CF5B04B5B9F6B5.idx  cocoa_monitor.m.CDEC0FCD842DD327.idx  cocoa_monitor.m.F89D4E20B3676C5B.idx  cocoa_platform.h.328E799B097F7D2C.idx  cocoa_platform.h.760428E588536895.idx  cocoa_time.c.36321C7902D5D8B8.idx  cocoa_time.c.4419A7B795C37DFD.idx  cocoa_time.h.CAD9E6776E4C2F76.idx  cocoa_time.h.FC61765C69181B96.idx  cocoa_window.m.903E16C4E3F61F05.idx  cocoa_window.m.BA7139F070751707.idx  context.c.14B39C4FD629C54E.idx  context.c.6F6D3D7FA710B1DF.idx  egl_context.c.754E89C3D1CDBB21.idx  egl_context.c.E4D00FF69C57999E.idx  glew.c.4F1DA0740ED904F9.idx  glew.h.12F41D952484BE40.idx  glfw3.h.3422A32CA50DEFF0.idx  glfw3.h.65C329A1D5F64D70.idx  glfw3native.h.A4F4DB7574704BAF.idx  glfw3native.h.C916B10ED378F4D1.idx  init.c.9AE0E92CA9113F79.idx  init.c.B2611D4EAA11CEAE.idx  input.c.3A8E0AF880E931C2.idx  (+43 more)
lib/: CMakeLists.txt  test.cpp  test.h
res/shaders/: basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  ObjParser.cpp  ObjParser.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  main.cpp
